--- a/config/prow/config.yaml
+++ b/config/prow/config.yaml
@@ -596,6 +596,7 @@ tide:
     kubernetes-sigs/cluster-api-provider-ibmcloud: squash
     kubernetes-sigs/controller-runtime: squash
     kubernetes-sigs/controller-tools: squash
+    kubernetes-sigs/ibm-vpc-block-csi-driver: squash
     kubernetes-sigs/krew-index: squash
     kubernetes-sigs/krew: squash
     kubernetes-sigs/kubebuilder: squash
